examples/neg/typevars.check
examples/neg/typevars.effekt:5:13:error: Expected R, but got Int
  g[String](4) // should not typecheck
            ^
